# sipila

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  appconfig.toml  docker-compose.yml  pyproject.toml  reset_migrations.sh
app/: __init__.py  admin.py  auth.py  config.py  db.py  forms.py  helper.py  models.py  siswa.py  supervisor.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: macros.jinja
app/templates/admin/: beranda.jinja  ganti_password.jinja  guru.jinja  guru_form.jinja  kategori.jinja  kategori_form.jinja  layout.jinja  permintaan_detail.jinja  rombel.jinja  rombel_form.jinja  siswa.jinja  siswa_detail.jinja  siswa_form.jinja
app/templates/login/: index.jinja  layout.jinja  siswa.jinja
app/templates/siswa/: beranda.jinja  layout.jinja  permintaan_detail.jinja  permintaan_form.jinja
app/templates/supervisor/: monitor.jinja
docker/: postupdate.sh  setup.sh
tests/: conftest.py  test_admin.py  test_auth.py  test_category.py  test_helper.py  test_models.py  test_permintaan.py  test_siswa.py  test_supervisor.py
