[project]
name = "sipila"
version = "0.1.0"
description = "Sistem Peminjaman Laptop SMKIT Ihsanul Fikri Mungkid"
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "flask>=3.1.1",
    "flask-htmx>=0.4.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gevent>=25.5.1",
    "gunicorn[gevent]>=23.0.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "wtforms>=3.2.1",
    "openpyxl>=3.1.5",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
